Add SSE for Audit state Improved UI

--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -9,22 +9,6 @@ html
 							a(href='#') Create Unit Test
 					// END BREADCRUMBS
 					.content-header-menu
-						// BEGIN DROPDOWN AJAX MENU
-						.dropdown-ajax-menu.btn-group
-							button.btn.dropdown-toggle(type='button', data-toggle='dropdown', data-hover='dropdown', data-close-others='true')
-								i.fa.fa-circle
-								i.fa.fa-circle
-								i.fa.fa-circle
-							ul.dropdown-menu-v2
-								li
-									a(href='start.html') Application
-								li
-									a(href='start.html') Reports
-								li
-									a(href='start.html') Templates
-								li
-									a(href='start.html') Settings
-						// END DROPDOWN AJAX MENU
 						// BEGIN MENU TOGGLER
 						button.menu-toggler.responsive-toggler(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 							span.toggle-icon
@@ -52,161 +36,8 @@ html
 									span.arrow
 								ul.sub-menu
 									li.nav-item.start
-										a.nav-link(href='index.html')
-											i.icon-bar-chart
-											span.title Dashboard
-							li.heading
-								h3.uppercase Features
-							li.nav-item
-								a.nav-link.nav-toggle(href='javascript:;')
-									i.icon-user
-									span.title User
-									span.arrow
-								ul.sub-menu
-									li.nav-item
-										a.nav-link(href='page_user_profile_1.html')
-											i.icon-user
-											span.title Profile 1
-									li.nav-item
-										a.nav-link(href='page_user_profile_1_account.html')
-											i.icon-user-female
-											span.title Profile 1 Account
-									li.nav-item
-										a.nav-link(href='page_user_profile_1_help.html')
-											i.icon-user-following
-											span.title Profile 1 Help
-									li.nav-item
-										a.nav-link(href='page_user_profile_2.html')
-											i.icon-users
-											span.title Profile 2
-									li.nav-item
-										a.nav-link.nav-toggle(href='javascript:;')
-											i.icon-notebook
-											span.title Login
-											span.arrow
-										ul.sub-menu
-											li.nav-item
-												a.nav-link(href='page_user_login_1.html', target='_blank')  Login Page 1
-											li.nav-item
-												a.nav-link(href='page_user_login_2.html', target='_blank')  Login Page 2
-											li.nav-item
-												a.nav-link(href='page_user_login_3.html', target='_blank')  Login Page 3
-											li.nav-item
-												a.nav-link(href='page_user_login_4.html', target='_blank')  Login Page 4
-											li.nav-item
-												a.nav-link(href='page_user_login_5.html', target='_blank')  Login Page 5
-											li.nav-item
-												a.nav-link(href='page_user_login_6.html', target='_blank')  Login Page 6
-									li.nav-item
-										a.nav-link(href='page_user_lock_1.html', target='_blank')
-											i.icon-lock
-											span.title Lock Screen 1
-									li.nav-item
-										a.nav-link(href='page_user_lock_2.html', target='_blank')
-											i.icon-lock-open
-											span.title Lock Screen 2
-							li.nav-item
-								a.nav-link.nav-toggle(href='javascript:;')
-									i.icon-social-dribbble
-									span.title General
-									span.arrow
-								ul.sub-menu
-									li.nav-item
-										a.nav-link(href='page_general_about.html')
-											i.icon-info
-											span.title About
-									li.nav-item
-										a.nav-link(href='page_general_contact.html')
-											i.icon-call-end
-											span.title Contact
-									li.nav-item
-										a.nav-link.nav-toggle(href='javascript:;')
-											i.icon-notebook
-											span.title Portfolio
-											span.arrow
-										ul.sub-menu
-											li.nav-item
-												a.nav-link(href='page_general_portfolio_1.html')  Portfolio 1
-											li.nav-item
-												a.nav-link(href='page_general_portfolio_2.html')  Portfolio 2
-											li.nav-item
-												a.nav-link(href='page_general_portfolio_3.html')  Portfolio 3
-											li.nav-item
-												a.nav-link(href='page_general_portfolio_4.html')  Portfolio 4
-									li.nav-item
-										a.nav-link.nav-toggle(href='javascript:;')
-											i.icon-magnifier
-											span.title Search
-											span.arrow
-										ul.sub-menu
-											li.nav-item
-												a.nav-link(href='page_general_search.html')  Search 1
-											li.nav-item
-												a.nav-link(href='page_general_search_2.html')  Search 2
-											li.nav-item
-												a.nav-link(href='page_general_search_3.html')  Search 3
-											li.nav-item
-												a.nav-link(href='page_general_search_4.html')  Search 4
-											li.nav-item
-												a.nav-link(href='page_general_search_5.html')  Search 5
-									li.nav-item
-										a.nav-link(href='page_general_pricing.html')
-											i.icon-tag
-											span.title Pricing
-									li.nav-item
-										a.nav-link(href='page_general_pricing_2.html')
-											i.icon-tag
-											span.title Pricing 2
-									li.nav-item
-										a.nav-link(href='page_general_faq.html')
-											i.icon-wrench
-											span.title FAQ
-									li.nav-item
-										a.nav-link(href='page_general_blog.html')
-											i.icon-pencil
-											span.title Blog
-									li.nav-item
-										a.nav-link(href='page_general_blog_post.html')
-											i.icon-note
-											span.title Blog Post
-									li.nav-item
-										a.nav-link(href='page_general_invoice.html')
-											i.icon-envelope
-											span.title Invoice
-									li.nav-item
-										a.nav-link(href='page_general_invoice_2.html')
-											i.icon-envelope
-											span.title Invoice 2
-							li.nav-item
-								a.nav-link.nav-toggle(href='javascript:;')
-									i.icon-settings
-									span.title System
-									span.arrow
-								ul.sub-menu
-									li.nav-item
-										a.nav-link(href='page_cookie_consent_1.html')
-											span.title Cookie Consent 1
-									li.nav-item
-										a.nav-link(href='page_cookie_consent_2.html')
-											span.title Cookie Consent 2
-									li.nav-item
-										a.nav-link(href='page_system_coming_soon.html', target='_blank')
-											span.title Coming Soon
-									li.nav-item
-										a.nav-link(href='page_system_404_1.html')
-											span.title 404 Page 1
-									li.nav-item
-										a.nav-link(href='page_system_404_2.html', target='_blank')
-											span.title 404 Page 2
-									li.nav-item
-										a.nav-link(href='page_system_404_3.html', target='_blank')
-											span.title 404 Page 3
-									li.nav-item
-										a.nav-link(href='page_system_500_1.html')
-											span.title 500 Page 1
-									li.nav-item
-										a.nav-link(href='page_system_500_2.html', target='_blank')
-											span.title 500 Page 2
+										a.nav-link(href='/')
+											span.title Index
 						// END SIDEBAR MENU
 					// END SIDEBAR
 				.page-fixed-main-content
