--- a/layouts/partials/navbar.pug
+++ b/layouts/partials/navbar.pug
@@ -5,8 +5,8 @@ body.page-md
             .container-fluid
                 .havbar-header
                     // BEGIN LOGO
-                    a#index.navbar-brand(href='start.html')
-                        img(src='public/img/logo.png', alt='Logo')
+                    a#index.navbar-brand(href='/',style="padding-top: 20px; ")
+                        | TeleXI
                     // END LOGO
                     // BEGIN TOPBAR ACTIONS
                     .topbar-actions
