--- a/layouts/partials/result.pug
+++ b/layouts/partials/result.pug
@@ -22,8 +22,9 @@
     .portlet-title#Audit_port(style="display:hidden;")
       .caption
         i.icon-cursor.font-dark.hide
-        span.caption-subject.font-dark.bold.uppercase  AUDIT
-          iframe#Audit
+        span.caption-subject.font-dark.bold.uppercase  AUDIT Report
+    .portlet-body
+        iframe#Audit
       
       
 
