--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -32,7 +32,7 @@ html
 							li.nav-item.start
 								a.nav-link.nav-toggle(href='javascript:;')
 									i.icon-home
-									span.title Dashboard
+									span.title Menu
 									span.arrow
 								ul.sub-menu
 									li.nav-item.start
@@ -190,8 +190,8 @@ html
 													a#btncontinue.btn.btn-outline.green.button-next(href='javascript:;')
 														| Continue
 														i.fa.fa-angle-right
-													a.btn.green.button-submit(href='javascript:;')
-														| Submit
+													a.btn.green.button-submit(href='/')
+														| Next Test 
 														i.fa.fa-check
 
 					// END PAGE BASE CONTENT
@@ -204,7 +204,7 @@ html
 					span.sr-only Toggle Quick Sidebar
 					i.icon-logout
 					.quick-sidebar-notification
-						span.badge.badge-danger 7
+						span.badge.badge-danger 0
 				// END QUICK SIDEBAR TOGGLER
 				a.go2top(href='#index')
 					i.icon-arrow-up
@@ -217,133 +217,9 @@ html
 			.page-quick-sidebar
 				ul.nav.nav-tabs
 					li.active
-						a(href='javascript:;', data-target='#quick_sidebar_tab_1', data-toggle='tab')
-							| Build
-							span.badge.badge-danger 2
-					li
 						a(href='javascript:;', data-target='#quick_sidebar_tab_2', data-toggle='tab')
 							| Report
-							span.badge.badge-success 7
-					li.dropdown
-						a.dropdown-toggle(href='javascript:;', data-toggle='dropdown')
-							| More
-							i.fa.fa-angle-down
-						ul.dropdown-menu.pull-right
-							li
-								a(href='javascript:;', data-target='#quick_sidebar_tab_3', data-toggle='tab')
-									i.icon-bell
-									|  Alerts
-							li
-								a(href='javascript:;', data-target='#quick_sidebar_tab_3', data-toggle='tab')
-									i.icon-info
-									|  Notifications
-							li
-								a(href='javascript:;', data-target='#quick_sidebar_tab_3', data-toggle='tab')
-									i.icon-speech
-									|  Activities
-							li.divider
-							li
-								a(href='javascript:;', data-target='#quick_sidebar_tab_3', data-toggle='tab')
-									i.icon-settings
-									|  Settings
-				.tab-content
-					#quick_sidebar_tab_1.tab-pane.active.page-quick-sidebar-chat
-						.page-quick-sidebar-chat-users(data-rail-color='#ddd', data-wrapper-class='page-quick-sidebar-list')
-							h3.list-heading Build#
-							ul.media-list.list-items
-								li.media
-									.media-status
-										span.badge.badge-success 8
-									img.media-object(src='public/assets/layouts/layout/img/avatar3.jpg', alt='...')
-									.media-body
-										h4.media-heading Bob Nilson
-										.media-heading-sub  Project Manager 
-							h3.list-heading Customers
-							ul.media-list.list-items
-								li.media
-									.media-status
-										span.badge.badge-warning 2
-									img.media-object(src='public/assets/layouts/layout/img/avatar6.jpg', alt='...')
-									.media-body
-										h4.media-heading Lara Kunis
-										.media-heading-sub  CEO, Loop Inc 
-										.media-heading-small  Last seen 03:10 AM 
-						.page-quick-sidebar-item
-							.page-quick-sidebar-chat-user
-								.page-quick-sidebar-nav
-									a.page-quick-sidebar-back-to-list(href='javascript:;')
-										i.icon-arrow-left
-										| Back
-								.page-quick-sidebar-chat-user-messages
-									.post.out
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar3.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Bob Nilson
-											span.datetime 20:15
-											span.body  When could you send me the report ? 
-									.post.in
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar2.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Ella Wong
-											span.datetime 20:15
-											span.body  Its almost done. I will be sending it shortly 
-									.post.out
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar3.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Bob Nilson
-											span.datetime 20:15
-											span.body  Alright. Thanks! :) 
-									.post.in
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar2.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Ella Wong
-											span.datetime 20:16
-											span.body  You are most welcome. Sorry for the delay. 
-									.post.out
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar3.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Bob Nilson
-											span.datetime 20:17
-											span.body  No probs. Just take your time :) 
-									.post.in
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar2.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Ella Wong
-											span.datetime 20:40
-											span.body  Alright. I just emailed it to you. 
-									.post.out
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar3.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Bob Nilson
-											span.datetime 20:17
-											span.body  Great! Thanks. Will check it right away. 
-									.post.in
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar2.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Ella Wong
-											span.datetime 20:40
-											span.body  Please let me know if you have any comment. 
-									.post.out
-										img.avatar(alt='', src='public/assets/layouts/layout/img/avatar3.jpg')
-										.message
-											span.arrow
-											a.name(href='javascript:;') Bob Nilson
-											span.datetime 20:17
-											span.body  Sure. I will check and buzz you if anything needs to be corrected. 
-								.page-quick-sidebar-chat-user-form
-									.input-group
-										input.form-control(type='text', placeholder='Type a message here...')
-										.input-group-btn
-											button.btn.green(type='button')
-												i.icon-paper-clip
+							span.badge.badge-success 0
 					#quick_sidebar_tab_2.tab-pane.page-quick-sidebar-alerts
 						.page-quick-sidebar-alerts-list
 							h3.list-heading General
@@ -509,50 +385,7 @@ html
 												.cont-col2
 													.desc  IPO Report for year 2013 has been released. 
 										.col2
-											.date  20 mins 
-					#quick_sidebar_tab_3.tab-pane.page-quick-sidebar-settings
-						.page-quick-sidebar-settings-list
-							h3.list-heading General Settings
-							ul.list-items.borderless
-								li
-									| Enable Notifications
-									input.make-switch(type='checkbox', checked='', data-size='small', data-on-color='success', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-								li
-									| Allow Tracking
-									input.make-switch(type='checkbox', data-size='small', data-on-color='info', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-								li
-									| Log Errors
-									input.make-switch(type='checkbox', checked='', data-size='small', data-on-color='danger', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-								li
-									| Auto Sumbit Issues
-									input.make-switch(type='checkbox', data-size='small', data-on-color='warning', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-								li
-									| Enable SMS Alerts
-									input.make-switch(type='checkbox', checked='', data-size='small', data-on-color='success', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-							h3.list-heading System Settings
-							ul.list-items.borderless
-								li
-									| Security Level
-									select.form-control.input-inline.input-sm.input-small
-										option(value='1') Normal
-										option(value='2', selected='') Medium
-										option(value='e') High
-								li
-									| Failed Email Attempts
-									input.form-control.input-inline.input-sm.input-small(value='5')
-								li
-									| Secondary SMTP Port
-									input.form-control.input-inline.input-sm.input-small(value='3560')
-								li
-									| Notify On System Error
-									input.make-switch(type='checkbox', checked='', data-size='small', data-on-color='danger', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-								li
-									| Notify On SMTP Error
-									input.make-switch(type='checkbox', checked='', data-size='small', data-on-color='warning', data-on-text='ON', data-off-color='default', data-off-text='OFF')
-							.inner-content
-								button.btn.btn-success
-									i.icon-settings
-									|  Save Changes
+												.date  20 mins 
 		// END QUICK SIDEBA
 		//
 			if lt IE 9
@@ -670,21 +503,43 @@ html
 									return(n.toFixed(n >= 10 || l < 1 ? 0 : 1) + ' ' + units[l]);
 								}
 					
+					let gotoBottom = function(){
+						$('html,body').animate({scrollTop: document.body.scrollHeight},"slow");
+					}
+					let stopBuild= function(state){
 
+						if(state=="err"){  // tell the prograss to user
+							toastr.info('By Server',"Build Error");
+						}else{
+							toastr.success('By Server',"Audit Complete");
+						}
+
+						isReportDone =true;
+						clearInterval(loadTimer);
+						$("#btnRedStop").text("report");
+						$("#btnRedStop").css("background-color","green");
+						source.close();
+						clearInterval(t);
+
+					}
+					let scrollToID = function(divID){
+						$('html, body').animate({
+								scrollTop: $("#"+divID).offset().top-30
+							}, 1000);
+					}
+
+					
 					let fetchlog = function(Build,graph,type){
 						let BuildID=Build;
 						let graphObj =graph;
+						let cTimeStamp="2000-05-21T10:25:42.680Z";// check to not regression graph
 						//mem
 						console.log(BuildID);
 						Rx.DOM.ajax({ url: `/api/v1/reports/${BuildID}/${type}`, responseType: 'json'})
 							.subscribe(
 								function (data) {
-									console.log('Backend connected');
-									
-						 
 									data.response.forEach(function (log) {
-										
-							 
+											if (cTimeStamp<log.TimeStamp){
 											graphObj.data.datasets[0].data.push({
 														x: log.TimeStamp,
 														y: log.available,
@@ -699,8 +554,8 @@ html
 														y: log.committed,
 											});
 						 
-									
-											
+										cTimeStamp =log.TimeStamp;
+										}
 									});
 							
 								graphObj.update();
