--- a/layouts/partials/result.pug
+++ b/layouts/partials/result.pug
@@ -6,7 +6,8 @@
           i.icon-cursor.font-dark.hide
           span.caption-subject.font-dark.bold.uppercase GC General Stats 
         .actions
-          a.btn.btn-sm.btn-circle.red.easy-pie-chart-reload(href='javascript:;')
+          a.btn.btn-sm.btn-circle.red.easy-pie-chart-reload(onClick='scrollToID("Audit");')
+            | to Audit
       .portlet-body
         canvas#memChart(width='400', height='300')
       .portlet-body
