--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -64,8 +64,9 @@ html
                               
                                this.on("success", function(file,res) {
                                     // create SSE connection to the backend 
-                                    source = new EventSource("/api/v1/build/"+`${res.toString()}/${_Username}/${_audit? "true":"false"}`);
+                                    source = new EventSource("/api/v1/build/"+`${res.toString()}/${_Username}/${$('#projname').val()+""}/${_audit? "true":"false"}`);
                                     buildFolder =res.toString();
+                                    timer();// start clock timer 
                                     // check service 
                                     let service = `1,${_audit? "1":"0"},0` ; 
                                     //show controller 
@@ -119,7 +120,22 @@ html
                   };
                    var loadTimer,build,currentBuild,buildFolder,_audit = false/*for checkbox*/;
                    let isReportDone = false;
+                  let stopBuild= function(state){
+                        fetchUserReports(_Username);
+                        if(state=="err"){  // tell the prograss to user
+                              toastr.info('By Server',"Build Error");
+                        }else{
+                              toastr.success('By Server',"Audit Complete");
+                        }
 
+                        isReportDone =true;
+                        clearInterval(loadTimer);
+                        $("#btnRedStop").text("report");
+                        $("#btnRedStop").css("background-color","green");
+                        source.close();
+                        clearInterval(t);
+
+                  }
                   $(function() {
                         $('#btnRedStop').bind( "click", function() {
                               let btn = $(this);
@@ -257,7 +273,214 @@ html
                   function timer() {
                         t = setTimeout(add, 1000);
                   }
-                  timer();
+                  
+                  let LoadAllGraph = function(build_id){
+                                          if(!build_id) return console.log("Can't find Build ID");;
+                                          window.myLine  = {};let ctx = {};
+                                          let logtype = ["mem","ns","os","cs","los","as"];
+                                          let logdesc = ["Memory Allocator","New space","Old space","Code space","Large object space","All spaces"]
+                                          for(tp in logtype){
+                                                ctx[tp] = document.getElementById(logtype[tp]+'Chart').getContext('2d');
+                                                console.log(ctx[tp]);
+                                                window.myLine[tp] = new Chart(ctx[tp], cfg[tp]);
+                                                window.myLine[tp].options.title.text = logdesc[tp];
+                                                fetchlog(build_id,window.myLine[tp],logtype[tp]);
+                                          }
+                                    };
+                                                      var color = Chart.helpers.color;
+                                                      var cfg = {};
+
+                                                      for(let i = 0 ; i<6;i++){
+                                                            cfg[i] = {
+                                                                  
+                                                                  type: 'line',
+                                                                  data: {
+                                                                        datasets: [{
+                                                                              label: 'Avaliable',
+                                                                              backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
+                                                                              borderColor: window.chartColors.red,
+                                                                              fill: false
+                                                                        },{
+                                                                              label: 'Used',
+                                                                              backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+                                                                              borderColor: window.chartColors.grey,
+                                                                              fill: false 
+                                                                        
+                                                                        }, {
+                                                                              label: 'Commited',
+                                                                              backgroundColor: color(window.chartColors.blue).alpha(0.5).rgbString(),
+                                                                              borderColor: window.chartColors.green,
+                                                                              fill: false
+                                                                        }]
+                                                                  },
+                                                                  options: {
+                                                                        maintainAspectRatio: false,
+                                                                        responsive: true,
+                                                                        title: {
+                                                                              display: true,
+                                                                              text: 'Memory Allocator'
+                                                                        },
+                                                                        scales: {
+                                                                              xAxes: [{
+                                                                                    type: 'time',
+                                                                                    display: true,
+                                                                                    scaleLabel: {
+                                                                                          display: true,
+                                                                                    },
+                                                                                    ticks: {
+                                                                                          major: {
+                                                                                                fontStyle: 'bold',
+                                                                                                fontColor: '#FF0000'
+                                                                                          }
+                                                                                    }
+                                                                              }],
+                                                                              yAxes: [{
+                                                                                    ticks: {
+                                                                                          beginAtZero: true,
+                                                                                          // Include Unit 
+                                                                                          callback: function(value, index, values) {
+                                                                                                return  niceBytes(value);
+                                                                                          }
+                                                                                    },	
+                                                                                    display: true,
+                                                                                    scaleLabel: {
+                                                                                          display: true,
+                                                                                          labelString: "Size"
+                                                                                          }
+                                                                              }
+                                                                        ]
+                                                                        }
+                                                                  }
+                                                            
+                                                            };}
+                                                            const units = ['bytes', 'KB', 'MB', 'GB', 'TB', 'PB', 'EB', 'ZB', 'YB'];
+
+                                                                  function niceBytes(x){
+                                                                        let l = 0, n = parseInt(x, 10) || 0;
+
+                                                                        while(n >= 1024 && ++l)
+                                                                              n = n/1024;
+                                                                        return(n.toFixed(n >= 10 || l < 1 ? 0 : 1) + ' ' + units[l]);
+                                                                  }
+                                                
+
+                  let fetchlog = function(Build,graph,type){
+                        let BuildID=Build;
+                        let graphObj =graph;
+                        let cTimeStamp="2000-05-21T10:25:42.680Z";// check to not regression graph
+                        //mem
+                        console.log(BuildID);
+                        Rx.DOM.ajax({ url: `/api/v1/reports/${BuildID}/${type}`, responseType: 'json'})
+                              .subscribe(
+                                    function (data) {
+                                          data.response.forEach(function (log) {
+                                                      if (cTimeStamp<log.TimeStamp){
+                                                      graphObj.data.datasets[0].data.push({
+                                                                        x: log.TimeStamp,
+                                                                        y: log.available,
+                                                      });
+                                                      
+                                                      graphObj.data.datasets[1].data.push({
+                                                                        x: log.TimeStamp,
+                                                                        y: log.used,
+                                                      });
+                                                      graphObj.data.datasets[2].data.push({
+                                                                        x: log.TimeStamp,
+                                                                        y: log.committed,
+                                                      });
+                              
+                                                cTimeStamp =log.TimeStamp;
+                                                }
+                                          });
+                              
+                                    graphObj.update();
+                                    },
+                                    function (error) {
+                                    // Log the error
+                                    console.log(error);
+                                    }
+                              );
+                        }
+                  let gotoBottom = function(){
+                        $('html,body').animate({scrollTop: document.body.scrollHeight},"slow");
+                  }
+
+                  let scrollToID = function(divID){
+                        $('html, body').animate({
+                                    scrollTop: $("#"+divID).offset().top-30
+                              }, 1000);
+                  }
+                  let fetchUserReports = function(user_id){
+                              $('.list-items').empty();
+                              Rx.DOM.ajax({ url: `/api/v1/user/${user_id}/reports`, responseType: 'json'})
+                              .subscribe(
+                                    function (data) {
+                                          data.response.forEach(function (unitTest) {
+
+
+                                                            let audit = unitTest.audit;
+                                                            let unitTest_id =  unitTest.unitTest_id;
+                                                            let buildPath = unitTest.path;
+                                                            let ts =  unitTest.TimeStamp;
+                                                            let projectname =  unitTest.proj_name;
+                                                            appendSidebar(audit,projectname,unitTest_id,buildPath,user_id,ts);
+                                                }
+                                          );
+                              
+                                    },
+                                    function (error) {
+                                    // Log the error
+                                    console.log(error);
+                                    }
+                              );
+                        }
+
+                  
+                  let appendSidebar = function(isAudit,projectname,unitTest_id,buildPath,user_id,timeStamp){
+                              let reportURL =buildPath.replace("uploads/project/testing/","report/")+"report.html";
+                              console.log(reportURL);
+                              
+                              let ele = `
+                              <li>
+                              <div class="col1">
+                                    <div class="cont">
+                                    <div class="cont-col1">
+                                          <div class="label label-sm label-info"><i class="fa fa-check"></i></div>
+                                    </div>
+                                    <div class="cont-col2">
+                                          <div class="desc"><span style="font-size:10px">Project : </span>${projectname}<br> <span href="javascript;" class="label label-sm label-warning sidebarbadges" >report page<i class="fa fa-share"></i></span>
+                                          ${isAudit? `<br><span onClick="openInNewTab('${reportURL}')" class="label label-sm label-danger sidebarbadges">Audited Page<i class="fa fa-share"></i></span>
+                                          </div>`:""}
+                                          
+                                    </div>
+                                    </div>
+                              </div>
+                              <div class="col2" style="float:right">
+                                    <div class="date" style="font-size:.8em"> ${timeDifference(moment(),new Date(timeStamp).getTime() )}</div>
+                              </div>
+                              </li>
+                              `;
+
+                                   $(ele).appendTo($('.list-items'));
+
+
+                  }
+                  function openInNewTab(url) {
+                        var win = window.open(url, '_blank');
+                        win.focus();
+                  }
+                  let clearSidebar= function(){
+                        $('.list-items').empty();
+                  }
+
+                        //temp	
+                  function newDate(days) {
+                        return moment().add(days, 'd').toDate();
+                  }
+
+                  function newDateString(days) {
+                        return moment().add(days, 'd').format();
+                  }
 
                   // FirebaseUI config. for auth login
 
@@ -325,6 +548,7 @@ html
                               userRef.set("Online");
                               
                               _Username = user.displayName;
+                              fetchUserReports(_Username);
                               con = $('#NAME')
                                con.text(_Username);
                               unblur();
@@ -346,6 +570,40 @@ html
                                con.removeClass("blur");
                                
                   }
+                  function timeDifference(current, previous) {
+
+                        var msPerMinute = 60 * 1000;
+                        var msPerHour = msPerMinute * 60;
+                        var msPerDay = msPerHour * 24;
+                        var msPerMonth = msPerDay * 30;
+                        var msPerYear = msPerDay * 365;
+
+                        var elapsed = current - previous;
+
+                        if (elapsed < msPerMinute) {
+                              return Math.round(elapsed/1000) + ' seconds ago';   
+                        }
+
+                        else if (elapsed < msPerHour) {
+                              return Math.round(elapsed/msPerMinute) + ' minutes ago';   
+                        }
+
+                        else if (elapsed < msPerDay ) {
+                              return Math.round(elapsed/msPerHour ) + ' hours ago';   
+                        }
+
+                        else if (elapsed < msPerMonth) {
+                              return 'approximately ' + Math.round(elapsed/msPerDay) + ' days ago';   
+                        }
+
+                        else if (elapsed < msPerYear) {
+                              return 'approximately ' + Math.round(elapsed/msPerMonth) + ' months ago';   
+                        }
+
+                        else {
+                              return 'approximately ' + Math.round(elapsed/msPerYear ) + ' years ago';   
+                        }
+                        }
 
 
-                  
+                                          
