--- a/layouts/partials/result.pug
+++ b/layouts/partials/result.pug
@@ -5,7 +5,7 @@
         .caption
           i.icon-cursor.font-dark.hide
           span.caption-subject.font-dark.bold.uppercase GC General Stats 
-        .actions
+        #btnToAudit.actions
           a.btn.btn-sm.btn-circle.red.easy-pie-chart-reload(onClick='scrollToID("Audit");')
             | to Audit
       .portlet-body
